fix: Remove extra margin at bottom of markdown content.

--- a/assets/styles/components/_card.scss
+++ b/assets/styles/components/_card.scss
@@ -2,3 +2,11 @@
   height: 100%;
   width: 240px;
 }
+
+.card-content {
+  margin-top: 1rem;
+
+  & > :last-child {
+    margin-bottom: 0;
+  }
+}
